force-app/main/default/objects/Studio_Project__c/Studio_Project__c.object-meta.xml
<CustomObject>
    <description>Studio engagements for creative shoots, post-production, and portfolio delivery.</description>
    <label>Studio Project</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Studio Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Studio Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>