force-app/main/default/objects/Studio_Project__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Studio Projects</relationshipLabel>
    <relationshipName>StudioProjects</relationshipName>
    <type>Lookup</type>
</CustomField>