force-app/main/default/objects/Studio_Project__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fashion Model Portfolio</fullName>
                <default>true</default>
                <label>Fashion Model Portfolio</label>
            </value>
            <value>
                <fullName>Basketball Athlete Profile</fullName>
            </value>
            <value>
                <fullName>SMB Brand Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>