force-app/main/default/objects/Studio_Project__c/fields/Shoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Date__c</fullName>
    <label>Shoot Date</label>
    <type>Date</type>
</CustomField>